-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Component/s: allocation
-
Labels:
As pointed out by Andrei Sekretenko, the REVIVE implementation in the allocator incorrectly clears decline filters for all of the framework's roles, rather than only those that were specified in the REVIVE call:
https://github.com/apache/mesos/blob/1.8.0/src/master/allocator/mesos/hierarchical.cpp#L1392
This should only clear filters for the roles specified in the REVIVE call.
- is related to
-
MESOS-8500 Enhanced support for multi-role scalibility
-
- In Progress
-
-
MESOS-9849 Add support for per-role REVIVE / SUPPRESS to V0 scheduler driver.
-
- Resolved
-