Fixed REVIVE to clear filters for only the specified roles.

This is a fix for MESOS-9856 bug wich was causing all the offer filters
to be cleared by reviveOffers() called for a specific subset of roles.

Review: https://reviews.apache.org/r/70926/