src/master/allocator/mesos/hierarchical.cpp
@@ -1319,7 +1319,6 @@ void HierarchicalAllocatorProcess::reviveOffers(
   CHECK(frameworks.contains(frameworkId));
 
   Framework& framework = frameworks.at(frameworkId);
-  framework.offerFilters.clear();
   framework.inverseOfferFilters.clear();
 
   const set<string>& roles = roles_.empty() ? framework.roles : roles_;
@@ -1328,9 +1327,11 @@ void HierarchicalAllocatorProcess::reviveOffers(
   // SUPPRESS is not parameterized. When parameterization is added,
   // we may need to differentiate between the cases here.
   foreach (const string& role, roles) {
-    CHECK(frameworkSorters.contains(role));
+    framework.offerFilters.erase(role);
 
+    CHECK(frameworkSorters.contains(role));
     frameworkSorters.at(role)->activate(frameworkId.value());
+
     framework.suppressedRoles.erase(role);
   }
 
